# softkraft-recruitment

./: .gitignore  docker-compose.yml
softkraft_recruitment/: .coveragerc  .flake8  .mypy.ini  .pylintrc  Dockerfile  manage.py  pyproject.toml  requirements-typing.txt  requirements.txt  run.sh
softkraft_recruitment/api/: enums.py  models.py  serializers.py  urls.py  views.py
softkraft_recruitment/api/csv/: orders.csv  products.csv
softkraft_recruitment/api/migrations/: 0001_initial.py  0002_alter_product_categories.py
softkraft_recruitment/api/scripts/: importer.py
softkraft_recruitment/softkraft_recruitment/: asgi.py  settings.py  urls.py  wsgi.py
